# LittleRF_Software

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  LittleRF_Software Debug.launch  LittleRF_Software.ioc  README.md
Core/Inc/: apds9960.h  app_conf.h  main.h  mpr121.h  stm32wbxx_it.h
Core/Src/: apds9960.c  app_entry.c  gpio.c  i2c.c  main.c  mpr121.c  stm32_lpm_if.c  stm32wbxx_it.c
STM32_WPAN/App/: app_ble.c  app_ble.h  custom_app.c  custom_app.h  custom_stm.c  custom_stm.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
